<resources>
    <string name="app_name">食记</string>
    <string name="takephotobtn">TAKE PHOTO</string>
    <string name="fromalbumbtn">FROM ALBUM</string>
    <string name="add_your_description">Add your description</string>
    <string name="upload">UPLOAD</string>
    <string name="add_your_title">Add your title</string>
    <string name="list">List</string>
    <string name="showtext">Text</string>
    <string name="update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">我的</string>
    <string name="look">发现</string>
</resources>