<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:maxWidth="300dp"
        android:maxHeight="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/takePhotoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="90dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/takephotobtn" />

        <Button
            android:id="@+id/fromAlbumBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="65dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/fromalbumbtn" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_your_title"
        android:text="" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="287dp"
        android:gravity="top"
        android:hint="@string/add_your_description"
        android:inputType="textMultiLine"
        android:text=""
        android:textSize="20sp" />

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:layout_gravity="center"
        android:text="@string/upload" />

</LinearLayout>